--- a/templates/administration/articles/articles.html
+++ b/templates/administration/articles/articles.html
@@ -100,16 +100,26 @@ Administration | Articles
                                         src="/static/placeholder-thumbnail.jpg" 
                                         data-src="${article.thumbnail || '/static/default-thumbnail.jpg'}" 
                                         class="card-img-top lazy-load" 
-                                        alt="${article.title}">
+                                        alt="${article.title}"
+                                    >
                                 </a>
-
-                                <!-- Card Body -->
                                 <div class="card-body">
-                                    <!-- Sheet Name -->
-                                    <h5 class="card-title">${article.title}🔥</h5>
-
-                                    <!-- View More Button -->
-                                    <a href="/administration/article/${article.slug}/" class="btn btn-outline-secondary w-100 mt-2">View More</a>
+                                    <h5 class="card-title">${article.title}</h5>
+                                    <div class="d-flex justify-content-between align-items-center mt-2">
+                                        <div class="engagement-stats">
+                                            <span class="me-3">
+                                                🔥${article.likes_count}
+                                                <br>
+                                                💬${article.comments_count}
+                                            </span>
+                                            <span>
+                                            </span>
+                                        </div>
+                                        <div class="action-buttons">
+                                            <a href="/administration/article/${article.slug}/" class="btn btn-sm btn-primary">View</a>
+                                            <a href="/administration/delete_article/${article.id}/" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this article?')">Delete</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
