--- a/templates/home/articles.html
+++ b/templates/home/articles.html
@@ -7,11 +7,16 @@ Job Articles
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/home/css/index.css' %}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 <style>
     body {
         background-color: #090909;
         color: white;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        overflow-x: hidden;
     }
 
     .responsive-container-block {
@@ -20,37 +25,30 @@ Job Articles
         width: 100%;
         display: flex;
         flex-wrap: wrap;
-        margin-top: 0px;
-        margin-right: auto;
-        margin-bottom: 0px;
-        margin-left: auto;
-        justify-content: flex-start;
+        margin: 0 auto;
+        justify-content: center;
+        padding: 20px 0;
     }
 
     .container-block {
         min-height: 75px;
         height: fit-content;
         width: 100%;
-        padding-top: 8%;
-        padding-right: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
+        padding: 4% 10px;
         display: block;
     }
 
     .responsive-cell-block {
         min-height: 75px;
+        width: 100%;
     }
 
     .container {
         max-width: 1380px;
-        margin-right: auto;
-        margin-left: auto;
-        padding-right: 30px;
-        padding-left: 30px;
+        margin: 0 auto;
+        padding: 0 15px;
+        width: 100%;
     }
-
-
 
     .card {
         background-color: #171A1FFF;
@@ -59,25 +57,29 @@ Job Articles
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding: 10px;
-        width: 95%;
-        min-height: 30vh;
-        max-height: 30vh;
+        padding: 15px;
+        width: 100%;
+        margin-bottom: 20px;
+        min-height: auto;
+        max-height: none;
+        position: relative;
     }
 
     .card img {
-        width: 50%;
-        max-width: 50%;
-        height: 25vh;
-        max-height: 25vh;
+        width: 40%;
+        max-width: 40%;
+        height: 200px;
         object-fit: cover;
         border-radius: 5px;
-        margin-left: 15px;
+        margin: 0 15px;
     }
 
     .card-body {
-        padding: 5px;
+        padding: 15px;
         flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .btn-custom {
@@ -94,6 +96,59 @@ Job Articles
         background-color: rgb(44, 212, 18);
         color: white;
     }
+
+    .like-button {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        background: rgba(0, 0, 0, 0.571);
+        border: none;
+        color: #ff6026;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        font-size: 0.9rem;
+        transition: all 0.3s ease;
+    }
+
+    .like-button:hover {
+        transform: scale(1.1);
+    }
+
+    .like-button i {
+        font-size: 1.2rem;
+    }
+
+    .like-button.liked i {
+        color: #ff6026;
+    }
+
+    .like-count {
+        color: #e0e0e0;
+    }
+
+    @media screen and (max-width: 768px) {
+        .card {
+            flex-direction: column;
+            padding: 10px;
+        }
+
+        .card img {
+            width: 100%;
+            max-width: 100%;
+            height: 200px;
+            margin: 0 0 15px 0;
+        }
+
+        .container {
+            padding: 0 10px;
+        }
+
+        .container-block {
+            padding: 2% 5px;
+        }
+    }
 </style>
 
 {% endblock %}
@@ -101,7 +156,6 @@ Job Articles
 {% block body %}
 
 <div class="container-block container">
-
     <h1 class="fw-bold text-center" style="font-size: 50px;">Job Articles🔥</h1>
     <div class="container mt-2">
         <div class="row g-4 mt-3 mb-4">
@@ -115,25 +169,74 @@ Job Articles
             {% endif %}
 
             {% for article in articles %}
-
             <div class="col-md-4">
-                <a href="{% url 'article' article.slug %}" style="text-decoration: none; color:white;">
-                    <div class="card p-0">
-                        <div class="card-body px-2">
-                            <h6 class="card-title fw-bold">{{ article.title }}</h6>
-                            <p class="text-white-50 fs-7">{{ article.created_at }}</p>
-                            <a href="{% url 'article' article.slug %}" class="btn btn-custom">Read More</a>
-                        </div>
-                        <img src="{{ article.thumbnail.url }}" class="card-img-top" alt="Nature's Calm">
+                <div class="card p-0">
+                    <div class="card-body px-2">
+                        <h6 class="card-title fw-bold">{{ article.title }}</h6>
+                        <p class="text-white-50 fs-7">{{ article.created_at }}</p>
+                        <a href="{% url 'article' article.slug %}" class="btn btn-custom">Read More</a>
                     </div>
-                </a>
+                    <img src="{{ article.thumbnail.url }}" class="card-img-top" alt="{{ article.title }}">
+                    <button class="like-button {% if user.is_authenticated and user in article.likes.all %}liked{% endif %}" 
+                            data-article-id="{{ article.id }}" 
+                            {% if not user.is_authenticated %}disabled title="Please login to like articles"{% endif %}>
+                        <i class="fas fa-fire"></i>
+                        <span class="like-count">{{ article.total_likes }}</span>
+                    </button>
+                </div>
             </div>
-
             {% endfor %}
-
         </div>
     </div>
-
 </div>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const likeButtons = document.querySelectorAll('.like-button');
+    
+    likeButtons.forEach(button => {
+        if (!button.disabled) {
+            button.addEventListener('click', function() {
+                const articleId = this.dataset.articleId;
+                const likeCount = this.querySelector('.like-count');
+                
+                fetch('{% url "like_article" %}', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded',
+                        'X-CSRFToken': getCookie('csrftoken')
+                    },
+                    body: `article_id=${articleId}`
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.liked) {
+                        this.classList.add('liked');
+                    } else {
+                        this.classList.remove('liked');
+                    }
+                    likeCount.textContent = data.total_likes;
+                });
+            });
+        }
+    });
+    
+    // Function to get CSRF token from cookies
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+});
+</script>
 
 {% endblock %}
