--- a/templates/student/jovac/submit_assignment.html
+++ b/templates/student/jovac/submit_assignment.html
@@ -50,7 +50,12 @@ Student -> Submit Assignment
     <div class="card" id="card-title-2">
         <div class="card-header ">
             <h5 class="card-title"><strong>({{ assignment.course_name }}) Title:</strong> {{ assignment.title }}</h5>
+            <div class="">
+                <button class="btn btn-danger" onclick="history.back()">Previous</button>
+                <a class="btn btn-success float-end" href="{% url 'get_next_jovac_assignment' assignment.id %}">Next</a>
+            </div>
         </div>
+
         <div class="card-body">
             <p class="card-text">{{ assignment.description|linebreaks }}</p>
         </div>
@@ -146,9 +151,8 @@ Student -> Submit Assignment
             </form>
 
             <div class="mt-4">
-                <button class="btn btn-secondary" onclick="history.back()">Previous</button>
-                <a class="btn btn-secondary float-end"
-                    href="{% url 'get_next_jovac_assignment' assignment.id %}">Next</a>
+                <button class="btn btn-danger" onclick="history.back()">Previous</button>
+                <a class="btn btn-success float-end" href="{% url 'get_next_jovac_assignment' assignment.id %}">Next</a>
             </div>
 
         </div>
