--- a/templates/student/jovac/view_tutorial.html
+++ b/templates/student/jovac/view_tutorial.html
@@ -16,11 +16,10 @@
     <div class="card shadow">
         <div class="card-body">
             <h2 class="card-title mb-3">{{ tutorial.title }}</h2>
-
-            <div class="alert alert-info">
-                This is a tutorial. No submission required.
-            </div>
-
+ <!-- create a back to sheet page button using js history-->
+            <button class="btn btn-danger" onclick="history.back()">Previous</button>
+            <a class="btn btn-success float-end" href="{% url 'get_next_jovac_assignment' tutorial.id %}">Next</a>
+            
             <hr>
 
             <!-- Render the HTML tutorial content safely -->
@@ -31,8 +30,8 @@
             <hr>
 
             <!-- create a back to sheet page button using js history-->
-            <button class="btn btn-secondary" onclick="history.back()">Previous</button>
-            <a class="btn btn-secondary float-end" href="{% url 'get_next_jovac_assignment' tutorial.id %}">Next</a>
+            <button class="btn btn-danger" onclick="history.back()">Previous</button>
+            <a class="btn btn-success float-end" href="{% url 'get_next_jovac_assignment' tutorial.id %}">Next</a>
             
         </div>
     </div>
